typescript/checker/tests/conformance/es2017/useSharedArrayBuffer2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            179,
        ),
        hi: BytePos(
            196,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer2.ts:4:16
  |
4 | var foge = new SharedArrayBuffer(1024);
  |                ^^^^^^^^^^^^^^^^^

